--- a/FullDemo/src/main/resources/application.properties
+++ b/FullDemo/src/main/resources/application.properties
@@ -18,4 +18,5 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 
 #server.address=192.168.1.103
-#server.port=8080
+server.address=192.168.1.47
+server.port=8080
